# octaryn

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Octaryn.DotNet.sln  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feedback.yml
cmake/: BuildLayout.cmake  CPM.cmake  Dependencies.cmake  ProjectOptions.cmake
cmake/Dependencies/: BasegameDependencies.cmake  ClientDependencies.cmake  DependencyPolicy.cmake  DotNetHosting.cmake  NativeDependencyAliases.cmake  ServerDependencies.cmake  SourceDependencyCache.cmake  ToolDependencies.cmake
cmake/Owners/: BasegameTargets.cmake  ClientTargets.cmake  DotNetOwner.cmake  NativeOwner.cmake  ServerTargets.cmake  SharedTargets.cmake  ToolTargets.cmake
cmake/Shared/: BuildOutputs.cmake  CompilerWarnings.cmake  OwnerBuildLayout.cmake  ProjectDefaults.cmake  TargetArchitecture.cmake
docs/: THIRD_PARTY_NOTICES.md  _config.yml  api.md  examples.md  index.html  index.md
docs/api/: examples.md  index.html  index.md
docs/architecture/: OCTARYN-AAA-RESEARCH-PROMPT.md  aaa-port-structure.md  index.html  octaryn-appendix.md  octaryn-master-plan.md  octaryn-port-loop-prompt.md
docs/assets/: octaryn-code-highlight.js  octaryn-docs.css
docs/migration/: gameplay-migration-map.md  gameplay-migration.md  old-architecture-map.md  rendering-migration.md  shader-migration.md
docs/texture-packs/: index.html
docs/validation/: build-matrix.md  renderdoc.md  runtime-runs.md  tracy.md
information/: LICENSE  README.md  Vertex Pulling.txt
octaryn-basegame/: GameExports.cs  Octaryn.Basegame.csproj  Octaryn.Game.csproj
octaryn-basegame/Gameplay/: GameplayMigrationMap.cs
octaryn-basegame/Source/: GameContext.cs  ManagedGameTag.cs
octaryn-basegame/Tools/: build_atlas_from_pack.py  generate_block_catalog_source.py
octaryn-client/: CMakeLists.txt  Octaryn.Client.csproj
octaryn-engine/: CMakeLists.txt  CMakePresets.json
octaryn-engine/source/: CMakeLists.txt
octaryn-engine/source/api/: OctarynFrameContext.cs  OctarynFrameSnapshot.cs  OctarynInputSnapshot.cs  OctarynNativeBridge.cs  OctarynNativeCommand.cs  OctarynWorldSnapshot.cs
octaryn-engine/source/app/: app_settings.cpp  main.cpp
octaryn-engine/source/app/audio/: play.cpp
octaryn-engine/source/app/display/: discovery.cpp  internal.h  state.h
octaryn-engine/source/app/lighting/ui/: internal.h
octaryn-engine/source/app/managed/: managed_command_queue.cpp  managed_command_queue.h  managed_frame_snapshot.h  managed_host.cpp
octaryn-engine/source/app/overlay/: interaction.cpp
octaryn-engine/source/app/player/: blocks.cpp  player.cpp  player.h  spawn.cpp
octaryn-engine/source/app/player/physics/: collision.cpp  internal.h  movement.cpp
octaryn-engine/source/app/runtime/: diagnostics.cpp  frame_metrics.cpp  frame_profile.cpp  iterate.cpp  lifecycle.h  options.h  renderdoc_capture.cpp  telemetry.cpp  telemetry.h
octaryn-engine/source/app/runtime/render/: begin.cpp  context.h  probe.cpp  render.h  scene.h
octaryn-engine/source/app/runtime/startup/: internal.h  platform.h  process.cpp  session.cpp
octaryn-engine/source/app/startup_terrain/: debug.cpp  render_distance.cpp  spawn.cpp
octaryn-engine/source/app/window/: display.cpp  internal.h  window.cpp
octaryn-engine/source/core/: crash_diagnostics.h  env.h  log.h  memory_mimalloc.h
octaryn-engine/source/core/camera/: camera.cpp  internal.h  matrix.cpp
octaryn-engine/source/core/persistence/: chunk_files.cpp  codec.cpp  json_file_io.h  persistence.cpp  player.cpp  scalar_types.h  state.h  world.cpp  world_save.cpp  world_time_store.cpp
octaryn-engine/source/core/world_time/: internal.h  snapshot.cpp
octaryn-engine/source/physics/jolt/: jolt_layers.cpp  jolt_layers.h  jolt_trace.h  jolt_worker_jobs.h
octaryn-engine/source/render/atlas/: animation.cpp  atlas.h
octaryn-engine/source/render/atlas/upload/: alpha.cpp  copy.cpp  mips.cpp  pack.h  pixels.h  transfer.cpp  upload.cpp
octaryn-engine/source/render/pipelines/: compute.cpp  graphics.cpp  graphics_internal.h  internal.h  lifecycle_internal.h  pipelines.cpp  release.cpp
octaryn-engine/source/render/postprocess/: composite.cpp  composite.h  depth.cpp
octaryn-engine/source/render/resources/: window_textures.cpp
octaryn-engine/source/render/scene/: forward.cpp  hidden_blocks.h
octaryn-engine/source/render/shader/: asset_metadata.hpp  internal.h  metadata.cpp  shader.cpp
octaryn-engine/source/render/world/: debug.cpp  debug.h  voxel.inc
octaryn-engine/source/runtime/jobs/: runtime_worker_policy.h  runtime_worker_pool.cpp
octaryn-engine/source/shaders/: clouds.frag.glsl  composite.comp.glsl  depth_packed.vert.glsl  opaque_packed.vert.glsl  shader_common.glsl  tiled_atlas_sampling.glsl  transparent.frag.glsl  transparent_packed.vert.glsl  ui.comp.glsl  water.vert.glsl
octaryn-engine/source/world/block/: block.h  definition.cpp  internal.h  skylight.cpp
octaryn-engine/source/world/chunks/: build_light.h  build_mesh.cpp  chunk.cpp  generation_blocks.cpp  lifecycle.h  query.cpp  snapshot.cpp  status.cpp  upload.cpp  upload_direct.cpp  upload_light.cpp  upload_mesh.cpp  upload_mesh.h  upload_telemetry.cpp  upload_telemetry.h
octaryn-engine/source/world/edit/: apply.cpp  bookkeeping.cpp  queue.cpp  schedule.cpp  traces.cpp
octaryn-engine/source/world/generation/: terrain.cpp  worldgen.cpp  worldgen.h
octaryn-engine/source/world/jobs/: scheduling.cpp
octaryn-engine/source/world/jobs/taskflow/: backend.cpp  internal.h  scheduler.cpp  slot_pool.cpp
octaryn-engine/source/world/runtime/: indices.cpp  query.cpp  runtime.cpp  state.cpp  update_telemetry.cpp  world.h
octaryn-engine/source/world/window/: update.cpp
octaryn-server/: Octaryn.Server.csproj
octaryn-shared/: Octaryn.Shared.csproj
old-architecture/: CMakeLists.txt  CMakePresets.json
tools/: engine_control_app.py  run_workspace_ui.bat  run_workspace_ui.sh
(+503 files in other folders)
